src/pyflakes/snapshots/ruff__pyflakes__tests__F822_F822.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UndefinedExport: b
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 7
  fix: ~
  parent: ~

