src/pyflakes/snapshots/ruff__pyflakes__tests__F823_F823.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UndefinedLocal: my_var
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 10
  fix: ~
  parent: ~

