src/pyflakes/snapshots/ruff__pyflakes__tests__F831_F831.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind: DuplicateArgumentName
  location:
    row: 1
    column: 24
  end_location:
    row: 1
    column: 30
  fix: ~
  parent: ~
- kind: DuplicateArgumentName
  location:
    row: 5
    column: 27
  end_location:
    row: 5
    column: 33
  fix: ~
  parent: ~
- kind: DuplicateArgumentName
  location:
    row: 9
    column: 26
  end_location:
    row: 9
    column: 32
  fix: ~
  parent: ~

