src/pyflakes/snapshots/ruff__pyflakes__tests__F841_F841_3.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UnusedVariable: x
  location:
    row: 5
    column: 4
  end_location:
    row: 5
    column: 5
  fix:
    content: ""
    location:
      row: 5
      column: 0
    end_location:
      row: 6
      column: 0
  parent: ~
- kind:
    UnusedVariable: y
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 5
  fix:
    content: ""
    location:
      row: 6
      column: 0
    end_location:
      row: 7
      column: 0
  parent: ~
- kind:
    UnusedVariable: x
  location:
    row: 13
    column: 4
  end_location:
    row: 13
    column: 5
  fix:
    content: ""
    location:
      row: 13
      column: 0
    end_location:
      row: 14
      column: 0
  parent: ~
- kind:
    UnusedVariable: y
  location:
    row: 14
    column: 4
  end_location:
    row: 14
    column: 5
  fix:
    content: ""
    location:
      row: 14
      column: 0
    end_location:
      row: 15
      column: 0
  parent: ~
- kind:
    UnusedVariable: x1
  location:
    row: 21
    column: 18
  end_location:
    row: 21
    column: 20
  fix:
    content: ""
    location:
      row: 21
      column: 14
    end_location:
      row: 21
      column: 20
  parent: ~
- kind:
    UnusedVariable: x3
  location:
    row: 27
    column: 19
  end_location:
    row: 27
    column: 21
  fix:
    content: ""
    location:
      row: 27
      column: 15
    end_location:
      row: 27
      column: 21
  parent: ~
- kind:
    UnusedVariable: y3
  location:
    row: 27
    column: 32
  end_location:
    row: 27
    column: 34
  fix:
    content: ""
    location:
      row: 27
      column: 28
    end_location:
      row: 27
      column: 34
  parent: ~
- kind:
    UnusedVariable: z3
  location:
    row: 27
    column: 45
  end_location:
    row: 27
    column: 47
  fix:
    content: ""
    location:
      row: 27
      column: 41
    end_location:
      row: 27
      column: 47
  parent: ~
- kind:
    UnusedVariable: x1
  location:
    row: 32
    column: 5
  end_location:
    row: 32
    column: 7
  fix: ~
  parent: ~
- kind:
    UnusedVariable: y1
  location:
    row: 32
    column: 9
  end_location:
    row: 32
    column: 11
  fix: ~
  parent: ~
- kind:
    UnusedVariable: coords2
  location:
    row: 33
    column: 15
  end_location:
    row: 33
    column: 22
  fix: ~
  parent: ~
- kind:
    UnusedVariable: coords3
  location:
    row: 34
    column: 4
  end_location:
    row: 34
    column: 11
  fix: ~
  parent: ~
- kind:
    UnusedVariable: x1
  location:
    row: 40
    column: 25
  end_location:
    row: 40
    column: 27
  fix:
    content: ""
    location:
      row: 40
      column: 21
    end_location:
      row: 40
      column: 27
  parent: ~
- kind:
    UnusedVariable: x2
  location:
    row: 45
    column: 46
  end_location:
    row: 45
    column: 48
  fix:
    content: ""
    location:
      row: 45
      column: 42
    end_location:
      row: 45
      column: 48
  parent: ~

