src/pyflakes/snapshots/ruff__pyflakes__tests__F842_F842.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UnusedAnnotation: name
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 8
  fix: ~
  parent: ~
- kind:
    UnusedAnnotation: age
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 7
  fix: ~
  parent: ~

