src/pyflakes/snapshots/ruff__pyflakes__tests__F901_F901.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind: RaiseNotImplemented
  location:
    row: 2
    column: 10
  end_location:
    row: 2
    column: 24
  fix:
    patch:
      content: NotImplementedError
      location:
        row: 2
        column: 10
      end_location:
        row: 2
        column: 24
- kind: RaiseNotImplemented
  location:
    row: 6
    column: 10
  end_location:
    row: 6
    column: 24
  fix:
    patch:
      content: NotImplementedError
      location:
        row: 6
        column: 10
      end_location:
        row: 6
        column: 24

