src/pyflakes/snapshots/ruff__pyflakes__tests__default_builtins.snap
---
source: src/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    UndefinedName: _
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 1
  fix: ~
  parent: ~

