src/pyflakes/snapshots/ruff__pyflakes__tests__default_typing_modules.snap
---
source: src/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    UndefinedName: db
  location:
    row: 6
    column: 34
  end_location:
    row: 6
    column: 38
  fix: ~
  parent: ~

